<resources>
    <string name="app_name">leagueManager</string>
    <string name="splash_text">League\nManager</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_account_create_one">Don\'t have an account? <b><u>Register here</u></b></string>
    <string name="create_account">Create Account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="playstation_data">Playstation Data</string>
    <string name="connect_to_playstation">Connect to Playstation</string>
    <string name="connect_to_xbox">Connect to Xbox</string>
    <string name="history">History</string>
    <string name="see_all">See All</string>
    <string name="no_description_added">No Description Added</string>
    <string name="no_history_available">No History Available</string>
    <string name="nothing_available">Nothing Available</string>
    <string name="must_be_eight_characters">Must be 8+ characters</string>

    <string name="password_not_match">Passwords don\'t match!</string>
    <string name="password_requirement">Password must be 8+ characters!</string>
    <string name="email_requirement">Please input valid email!</string>
    <string name="empty_field">Please enter all the fields!</string>

    <string name="create_league">Create a League</string>
    <string name="join_league">Join a League</string>
    <string name="joined_league">Joined League</string>
    <string name="league_updates">League Updates</string>

    <string name="home_details">Updates\nFeeds\nRecent Streams\nEtc</string>
    <string name="league_details">Add a League\nLeague Page Shortcut\nLeagues Preview</string>
    <string name="streams_details">All Previous streams based on the time stamp</string>
    <string name="profile_details">Profile\nHistory\nPS Public Data</string>
    <string name="search_details">Search for Players &amp; League</string>

    <string name="updates">Updates</string>
    <string name="feeds">Feeds</string>
    <string name="recent_streams">Recent Streams</string>

    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="select_option">Select Option</string>

    <string name="home">Home</string>
    <string name="league">League</string>
    <string name="search">Search</string>
    <string name="streams">Streams</string>
    <string name="profile">Profile</string>
    <string name="browse">Browse</string>

    <string name="enable_permission">Please enable storage and camera permissions</string>
    <string name="select_photo">Select Photo</string>

</resources>