<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/home" />
    <item
        android:id="@+id/action_league"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/league" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/baseline_search_white_36"
        android:title=""/>
    <item
        android:id="@+id/action_streams"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/streams" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/profile" />
</menu>