<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginStart="@dimen/padding_between_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/toolbar_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <RelativeLayout
        android:id="@+id/layout_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_between_layout"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in">

        <RelativeLayout
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_outlined_textview"
                android:orientation="vertical"
                android:padding="@dimen/padding_between_layout_inner">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:padding="@dimen/padding_textView"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/black"
                android:paddingLeft="@dimen/padding_between_layout_inner"
                android:paddingRight="@dimen/padding_between_layout_inner"
                android:text="@string/username"
                android:textColor="@color/white" />

        </RelativeLayout>

        <View
            android:id="@+id/view_margin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_margin"
            android:layout_below="@+id/layout_username" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_margin"
            android:layout_marginTop="@dimen/margin_between_layout_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/background_outlined_textview"
                android:orientation="vertical"
                android:padding="@dimen/padding_between_layout_inner">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/padding_textView"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@color/black"
                android:paddingLeft="@dimen/padding_between_layout_inner"
                android:paddingRight="@dimen/padding_between_layout_inner"
                android:text="@string/password"
                android:textColor="@color/white" />

        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_create_one"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_medium_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_sign_in" />

    <Button
        android:id="@+id/bt_login"
        android:textAllCaps="false"
        android:paddingStart="@dimen/padding_between_layout"
        android:paddingEnd="@dimen/padding_between_layout"
        android:paddingTop="@dimen/padding_between_layout_small"
        android:paddingBottom="@dimen/padding_between_layout_small"
        android:background="@drawable/button_orange"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium_size"
        android:textStyle="bold"
        android:text="@string/login"
        android:layout_marginTop="@dimen/margin_between_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>