<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include android:id="@+id/layout_appbar"
        layout="@layout/layout_toolbar_home"/>

    <RelativeLayout
        android:id="@+id/layout_add_connect_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_between_layout"
        android:layout_marginEnd="@dimen/padding_between_layout"
        android:layout_marginBottom="@dimen/margin_between_layout"
        app:layout_constraintTop_toBottomOf="@id/layout_appbar">

        <LinearLayout
            android:id="@+id/layout_connect_playstation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_layout_medium">

            <TextView
                android:fontFamily="@font/kalam_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_between_layout_inner"
                android:gravity="start"
                android:text="@string/create_league"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_medium_size" />

            <ImageView
                android:layout_width="@dimen/plus_circle_width_height"
                android:layout_height="@dimen/plus_circle_width_height"
                android:layout_marginStart="@dimen/margin_between_layout_small"
                android:src="@drawable/add_icon"
                android:tint="@color/blue" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginBottom="@dimen/margin_between_layout_medium"
            android:id="@+id/layout_connect_xbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_connect_playstation"
            android:layout_marginTop="@dimen/margin_between_layout_medium">

            <TextView
                android:fontFamily="@font/kalam_regular"
                android:id="@+id/tv_connect_xbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_between_layout_inner"
                android:gravity="start"
                android:text="@string/join_league"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_medium_size" />

            <ImageView
                android:layout_width="@dimen/plus_circle_width_height"
                android:layout_height="@dimen/plus_circle_width_height"
                android:layout_marginStart="@dimen/margin_between_layout_small"
                android:src="@drawable/connect"
                android:tint="@color/blue" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_joined_league"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_between_layout_inner"
        android:layout_marginTop="@dimen/padding_between_layout_small"
        android:layout_marginEnd="@dimen/padding_between_layout_inner"
        android:layout_marginBottom="@dimen/padding_between_layout_small"
        android:background="@drawable/cardview_background"
        android:padding="@dimen/padding_between_layout_small"
        app:layout_constraintTop_toBottomOf="@id/layout_add_connect_league">

        <RelativeLayout
            android:id="@+id/layout_title_joined_leagues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/tv_see_all_leagues"
                android:fontFamily="@font/kalam_regular"
                android:gravity="start"
                android:padding="@dimen/padding_between_layout_small"
                android:text="@string/joined_league"
                android:textColor="@color/white"
                android:textSize="@dimen/text_button_large_medium_size" />

            <TextView
                android:id="@+id/tv_see_all_leagues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/padding_between_layout_inner"
                android:fontFamily="@font/kalam_regular"
                android:padding="@dimen/padding_between_layout_small"
                android:text="@string/see_all"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_medium_size" />
        </RelativeLayout>

        <View
            android:id="@+id/view_margin_one"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_between_layout_huge"
            android:layout_below="@id/layout_title_joined_leagues" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_margin_one"
            android:fontFamily="@font/kalam_regular"
            android:gravity="start"
            android:padding="@dimen/padding_between_layout_inner"
            android:text="@string/nothing_available"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_small_size"
            android:textStyle="italic" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_updates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_between_layout_inner"
        android:layout_marginTop="@dimen/padding_between_layout_small"
        android:layout_marginEnd="@dimen/padding_between_layout_inner"
        android:layout_marginBottom="@dimen/padding_between_layout_small"
        android:background="@drawable/cardview_background"
        android:padding="@dimen/padding_between_layout_small"
        app:layout_constraintTop_toBottomOf="@id/layout_joined_league">

        <RelativeLayout
            android:id="@+id/layout_title_league_updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/tv_see_all_league_updates"
                android:fontFamily="@font/kalam_regular"
                android:gravity="start"
                android:padding="@dimen/padding_between_layout_small"
                android:text="@string/league_updates"
                android:textColor="@color/white"
                android:textSize="@dimen/text_button_large_medium_size" />

            <TextView
                android:id="@+id/tv_see_all_league_updates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/padding_between_layout_inner"
                android:fontFamily="@font/kalam_regular"
                android:padding="@dimen/padding_between_layout_small"
                android:text="@string/see_all"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_medium_size" />
        </RelativeLayout>

        <View
            android:id="@+id/view_margin_two"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_between_layout_huge"
            android:layout_below="@id/layout_title_league_updates" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_margin_two"
            android:fontFamily="@font/kalam_regular"
            android:gravity="start"
            android:padding="@dimen/padding_between_layout_inner"
            android:text="@string/nothing_available"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_small_size"
            android:textStyle="italic" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>