<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <include
        android:id="@+id/appbar_layout"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_between_layout">

            <RelativeLayout
                android:layout_marginTop="@dimen/padding_between_layout_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_outlined_textview"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_between_layout_inner">

                    <EditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="@dimen/padding_textView"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/black"
                    android:paddingLeft="@dimen/padding_between_layout_inner"
                    android:paddingRight="@dimen/padding_between_layout_inner"
                    android:text="@string/firstName"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_between_layout_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_outlined_textview"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_between_layout_inner">

                    <EditText
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="@dimen/padding_textView"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/black"
                    android:paddingLeft="@dimen/padding_between_layout_inner"
                    android:paddingRight="@dimen/padding_between_layout_inner"
                    android:text="@string/lastName"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_between_layout_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_outlined_textview"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_between_layout_inner">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:maxLines="1"
                        android:padding="@dimen/padding_textView"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/black"
                    android:paddingLeft="@dimen/padding_between_layout_inner"
                    android:paddingRight="@dimen/padding_between_layout_inner"
                    android:text="@string/username"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_between_layout_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_outlined_textview"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_between_layout_inner">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="@dimen/padding_textView"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/black"
                    android:paddingLeft="@dimen/padding_between_layout_inner"
                    android:paddingRight="@dimen/padding_between_layout_inner"
                    android:text="@string/email"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_between_layout_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_outlined_textview"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_between_layout_inner">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/padding_textView"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/black"
                    android:paddingLeft="@dimen/padding_between_layout_inner"
                    android:paddingRight="@dimen/padding_between_layout_inner"
                    android:text="@string/password"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_between_layout_medium">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/background_outlined_textview"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_between_layout_inner">

                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/padding_textView"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:background="@color/black"
                    android:paddingLeft="@dimen/padding_between_layout_inner"
                    android:paddingRight="@dimen/padding_between_layout_inner"
                    android:text="@string/confirm_password"
                    android:textColor="@color/white" />

            </RelativeLayout>

            <Button
                android:id="@+id/bt_register"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_layout_huge"
                android:background="@drawable/button_orange"
                android:paddingStart="@dimen/padding_between_layout"
                android:paddingTop="@dimen/padding_between_layout_small"
                android:paddingEnd="@dimen/padding_between_layout"
                android:paddingBottom="@dimen/padding_between_layout_small"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_medium_size"
                android:textStyle="bold" />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>